--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.19)
-project(WindingsLabSDL)
+cmake_minimum_required(VERSION 3.28)
+project(WINDINGS_SDL3 
+        VERSION 1.0 
+        LANGUAGES C CXX)
 
 set(CMAKE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
