--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.28)
+list(APPEND CMAKE_MODULE_PATH
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
+)
+
 project(WD_SDL LANGUAGES C CXX)
 
 set(CMAKE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -9,33 +13,111 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(CMAKE_C_COMPILER_ID MATCHES "Clang|IntelLLVM")
-    message("Setting clang debug flags")
-    #set(CLANG_OPTIONS "-g3 -ggdb3 -ggdb -gcolumn-info -gfull")
-    set(CLANG_OPTIONS "-O0 -g -gdwarf-3")
-    set(CMAKE_CXX_FLAGS_DEBUG ${CLANG_OPTIONS})
-    set(CMAKE_C_FLAGS_DEBUG ${CLANG_OPTIONS})
-    unset(CLANG_OPTIONS)
-endif()
+set(compiler_is_msvc "$<CXX_COMPILER_ID:MSVC>")
+set(compiler_is_gnu "$<CXX_COMPILER_ID:GNU>")
+set(compiler_is_clang "$<OR:$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:Clang>>")
 
-set(SOURCES
-        main.cpp
-        src/WD_engine.cpp
+set(SDL_STATIC ON)
+set(SDL_SHARED OFF)
+set(BUILD_SHARED_LIBS OFF)
+
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/vendor/SDL")
+
+file(GLOB_RECURSE
+  project_sources
+  CONFIGURE_DEPENDS
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.[hc]"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.[hc]pp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/*.[hc]"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/*.[hc]pp"
 )
 
-set(HEADERS
-        include/WD_engine.h
-        src/utility/WD_constructors.h
+add_executable(${PROJECT_NAME}
+    ${project_sources}
 )
 
-add_executable(WD_SDL ${SOURCES} ${HEADERS})
-
-target_include_directories(WD_SDL
-        PUBLIC
-        $<BUILD_INTERFACE:${WD_SDL_SOURCE_DIR}/include>
-        PRIVATE
-        $<BUILD_INTERFACE:${WD_SDL_SOURCE_DIR}/src>
+target_compile_features(${PROJECT_NAME}
+    PRIVATE cxx_std_23
 )
 
-add_subdirectory(vendor)
-target_link_libraries(WD_SDL PRIVATE vendor)
+target_compile_definitions(${PROJECT_NAME}
+  PUBLIC
+    NOMINMAX
+    SDL_MAIN_USE_CALLBACKS
+
+    $<${compiler_is_msvc}:
+        $<$<CONFIG:Debug>:
+            _NO_DEBUG_HEAP=1
+        >
+    >
+
+    $<${compiler_is_gnu}:
+		$<$<CONFIG:Debug>:
+			_GLIBCXX_DEBUG
+		>
+	>
+)
+
+target_compile_options(${PROJECT_NAME}
+  PRIVATE
+    $<${compiler_is_msvc}:
+        /Zc:preprocessor
+        /utf-8
+        /std:c++latest
+
+        $<$<CONFIG:Release>:
+            /O2 # maximize speed
+            /Oy # frame pointer omission
+            /Gw # optimize global data
+            /GL # whole program optimization
+            /Ot # favor fast code
+        >
+    >
+
+    $<${compiler_is_clang}:
+        -march=native
+        -DNDEBUG
+    >
+
+    $<${compiler_is_gnu}:
+        #
+    >
+)
+
+target_link_options(${PROJECT_NAME}
+  PRIVATE
+    $<${compiler_is_msvc}:
+        # /verbose
+
+        $<$<CONFIG:Release>:
+            /opt:ref # eliminate unreferenced functions/data
+        >
+
+        $<$<CONFIG:Debug>:
+            /opt:ref # eliminate unreferenced functions/data
+        >
+    >
+
+    $<$<NOT:${compiler_is_msvc}>:
+		$<${compiler_is_gnu}:
+			$<$<CONFIG:Debug>:
+				-lstdc++exp
+			>
+		>
+
+        -static-libgcc
+        -static-libstdc++
+    >
+)
+
+target_include_directories(${PROJECT_NAME}
+  PRIVATE
+    "${CMAKE_CURRENT_SOURCE_DIR}/src"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include"
+)
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE SDL3::SDL3
+)
+
+include(cmake-utils)
