cmake sources organized, added glad init and keyboard handler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.28)
 project(WD_SDL LANGUAGES C CXX)
 
+# list(APPEND CMAKE_MODULE_PATH "${WD_SDL_SOURCE_DIR}/cmake")
+
 set(CMAKE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -10,19 +12,24 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SOURCES
+    # DEFAULT sources
     main.cpp
-    src/glad/gl.c
     src/WD_engine.cpp
-)
-
-set(HEADERS
     include/WD_engine.h
+    
+    # KEYBOARD
+    include/keyboard/WD_keyboard.h
+    
+    # UTILITY
+    src/utility/WD_constructors.h
+
+    # GLAD
+    src/glad/gl.c
     include/glad/gl.h
     include/KHR/khrplatform.h
-    src/utility/WD_constructors.h
 )
 
-add_executable(WD_SDL ${SOURCES} ${HEADERS})
+add_executable(WD_SDL ${SOURCES})
 
 target_compile_features(WD_SDL PRIVATE cxx_std_23)
 
