--- a/src/opengl/shader/CMakeLists.txt
+++ b/src/opengl/shader/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(WD_SDL
     PRIVATE
     WD_gl_shader.cpp
-    WD_gl_shaderfactory.cpp
-    WD_gl_shaderprogram.cpp
+    WD_gl_shader_program.cpp
+    WD_gl_shader_container.cpp
 )
