--- a/include/engine/CMakeLists.txt
+++ b/include/engine/CMakeLists.txt
@@ -1,8 +1,12 @@
 target_sources(WD_SDL
     PUBLIC
-    WD_engine.h
     WD_log.h
     WD_window.h
+    PUBLIC
+        FILE_SET CXX_MODULES
+        FILES
+        m_engine.cppm
+        engine.cppm
 )
 
 add_subdirectory(math)
