--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -2,7 +2,7 @@ target_sources(WD_SDL
     PRIVATE
     engine.cpp
     WD_log.cpp
-    WD_window.cpp
+    window.cpp
 )
 
 add_subdirectory(keyboard)
