--- a/include/engine/CMakeLists.txt
+++ b/include/engine/CMakeLists.txt
@@ -1,12 +1,11 @@
 target_sources(WD_SDL
     PUBLIC
-    WD_log.h
-    PUBLIC
         FILE_SET CXX_MODULES
         FILES
         m_engine.cppm
         engine.cppm
         window.cppm
+        log.cppm
 )
 
 add_subdirectory(keyboard)
