--- a/include/opengl/CMakeLists.txt
+++ b/include/opengl/CMakeLists.txt
@@ -1,6 +1,10 @@
 target_sources(WD_SDL
     PUBLIC
     WD_gl_context.h
+    PUBLIC
+        FILE_SET CXX_MODULES
+        FILES
+        opengl.cppm
 )
 
 add_subdirectory(buffers)
