shader container submodule

--- a/src/opengl/shader/CMakeLists.txt
+++ b/src/opengl/shader/CMakeLists.txt
@@ -2,5 +2,5 @@ target_sources(WD_SDL
     PRIVATE
     shader.cpp
     WD_gl_shader_program.cpp
-    WD_gl_shader_container.cpp
+    container.cpp
 )
