--- a/include/opengl/shader/CMakeLists.txt
+++ b/include/opengl/shader/CMakeLists.txt
@@ -1,10 +1,10 @@
 target_sources(WD_SDL
     PUBLIC
     WD_gl_shader_program.h
-    WD_gl_shader_container.h
     PUBLIC
         FILE_SET CXX_MODULES
         FILES
         m_shader.cppm
         shader.cppm
+        container.cppm
 )
