Created OpenGL Object class abstraction

--- a/include/opengl/CMakeLists.txt
+++ b/include/opengl/CMakeLists.txt
@@ -1,12 +1,12 @@
 target_sources(WD_SDL
     PUBLIC
+    gl.h
+    khrplatform.h
+    PUBLIC
         FILE_SET CXX_MODULES
         FILES
         m_opengl.cppm
         context.cppm
 )
 
-add_subdirectory(buffers)
-add_subdirectory(glad)
-add_subdirectory(KHR)
-add_subdirectory(shader)
+add_subdirectory(object)
