--- a/include/wd/sdl/opengl/object/CMakeLists.txt
+++ b/include/wd/sdl/opengl/object/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(WD_SDL
     FILE_SET CXX_MODULES
     FILES
     m_object.cppm
+    n_creator.cppm
     factory.cppm
     storage.cppm
     object.cppm
