--- a/conandata.yml
+++ b/conandata.yml
@@ -2,6 +2,7 @@
 # To keep your changes, remove these comment lines, but the plugin won't be able to modify your requirements
 
 requirements:
+  - "glm/1.0.1"
   - "libpng/1.6.43"
   - "zlib/1.3.1"
   - "boost/1.86.0"
